<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StaticUserInterfaces</string>
    <string name="action_settings">Settings</string>
    <string name="name_string">Name</string>
    <string name="age_string">Age</string>
    <string name="gender_string">Gender</string>
    <string name="favouriteColour_string">Favourite Colour</string>
    <string name="nextButton_string">Next</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="male_string">M</string>
    <string name="female_string">F</string>
    <string-array name="colour_array">
        <item >BLUE</item>
        <item >GREEN</item>
        <item >RED</item>
        <item >YELLOW</item>
    </string-array>

</resources>
