<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameTextView"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="45dp"
        android:text="@string/gender_string" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/genderTextView"
        android:layout_below="@+id/genderTextView"
        android:layout_marginTop="48dp"
        android:text="@string/age_string" />

    <TextView
        android:id="@+id/favouriteColourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ageTextView"
        android:layout_below="@+id/ageTextView"
        android:layout_marginTop="48dp"
        android:text="@string/favouriteColour_string" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/favouriteColourTextView"
        android:layout_marginLeft="151dp"
        android:layout_marginRight="113dp"
        android:layout_marginTop="96dp"
        android:layout_toRightOf="@+id/favouriteColourTextView"
        android:onClick="nextButton"
        android:text="@string/nextButton_string" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/genderTextView"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/maleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male_string" />

        <RadioButton
            android:id="@+id/femaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_string" />
    </RadioGroup>

    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameTextView"
        android:layout_alignLeft="@+id/genderRadioGroup"
        android:ems="10"
        android:inputType="textPersonName" />

    <SeekBar
        android:id="@+id/ageSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/genderRadioGroup"
        android:layout_alignRight="@+id/nameTextField"
        android:layout_alignTop="@+id/ageTextView" />

    <Spinner
        android:id="@+id/colourSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ageSeekBar"
        android:layout_alignTop="@+id/favouriteColourTextView"
        android:entries="@array/colour_array" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="84dp"
        android:text="@string/name_string" />

    <View
        android:id="@+id/colorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/favouriteColourTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ageSeekBar"
        android:layout_below="@+id/nextButton"
        android:layout_marginBottom="248dp"
        android:layout_marginTop="58dp" />

</RelativeLayout>